<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="SỬA SẢN PHẨM"
            android:drawableStart="@drawable/ic_back"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:drawableStart="@drawable/ic_category"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="Mã loại:"
            android:id="@+id/edtMaLoai"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="17dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tenloai"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_tenloai"
            android:drawableTint="@color/colorText"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:duplicateParentState="false"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMaSP"
            android:hint="@string/masp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/ic_masp"
            android:drawableTint="@color/colorText"
            android:background="@drawable/edit_text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTenSP"
            android:hint="@string/tensp"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_tensp"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMoTa"
            android:hint="@string/mota"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_mota"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSoLuong"
            android:hint="@string/soluong"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_soluong"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtGiaNhap"
            android:hint="@string/gianhap"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_gianhap"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtGiaBan"
            android:hint="@string/giaban"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_giaban"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtAnh"
            android:hint="@string/anh"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_image"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSua"
            android:gravity="center"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="SỬA"
            android:layout_marginLeft="70dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:textSize="20dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHuy"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="HỦY"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>