<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:layout_marginLeft="20dp"
            android:background="@color/colorBackground"
            android:id="@+id/imgBackDangKy"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="ĐĂNG KÝ"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="30dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_name"
            android:drawableTint="@color/colorText"
            android:background="@drawable/edit_text_background">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtHoTenDangKy"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_user"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtTenDNDangKy"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_password"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtMKDangKy"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_email"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmailDangKy"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sdt"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_phone"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtSDTDangKy"
                android:maxLength="10"
                android:inputType="number"
                android:digits="0123456789"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/diachi"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_address"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtDiachiDangKy"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDangky"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="ĐĂNG KÝ"
            android:layout_marginLeft="50dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorTextWhite"
            android:textSize="15dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHuyDangKy"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="HỦY"
            android:background="@drawable/button_background"
            android:textColor="@color/colorTextWhite"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>