<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/colorBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="SỬA NHÂN VIÊN"
            android:drawableStart="@drawable/ic_back"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="30dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="45dp"
            android:drawableStart="@drawable/ic_role"
            android:gravity="center" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="12dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="Quyền:"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:textSize="16dp" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbQuyen"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quản lý"
                android:id="@+id/rbQuanly"
                android:fontFamily="@font/seg_ui_semibold"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="16dp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhân viên"
                android:id="@+id/rbNhanvien"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/seg_ui_semibold"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="16dp"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtHoTen"
            android:hint="@string/name"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_name"
            android:drawableTint="@color/colorText"
            android:background="@drawable/edit_text_background">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtTenDN"
            android:hint="@string/username"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_user"
            android:drawableTint="@color/colorText"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtMK"
            android:hint="@string/password"
            android:paddingTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:startIconDrawable="@drawable/ic_password"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:password="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtEmail"
            android:hint="@string/email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_email"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtSDT"
            android:hint="@string/sdt"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_phone"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtDiaChi"
            android:hint="@string/diachi"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_address"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSua"
            android:gravity="center"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="SỬA"
            android:layout_marginLeft="85dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:textSize="20dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnHuy"
            android:gravity="center"
            android:layout_marginLeft="70dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="HỦY"
            android:background="@drawable/button_background"
            android:textColor="@color/colorText"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>