<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Activity.QuanLyHoaDonActivity"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTitle"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorTitle"
            android:paddingLeft="10dp"
            android:src="@drawable/ic_address"
            android:id="@+id/imgHomeQLHD"/>

        <TextView
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorTitle"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="QUẢN LÝ HÓA ĐƠN"
            android:textColor="@color/colorText"
            android:textSize="22dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/edtKeyHD"
            android:layout_width="290dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_background"
            android:drawableTint="@color/colorText"
            android:hint="@string/key"
            android:textSize="20dp"
            app:startIconDrawable="@drawable/ic_name" />

        <ImageButton
            android:id="@+id/imgSearchHD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_search" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tenkhach"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_name"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtTenKhachHD"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ngayban"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="10dp"
            app:startIconDrawable="@drawable/ic_time"
            android:drawableTint="@color/colorText"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtNgayBanHD"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnThemHD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="@font/seg_ui_semibold"
            android:gravity="center"
            android:layout_marginLeft="135dp"
            android:text="THÊM"
            android:textColor="@color/colorTextWhite"
            android:textSize="15dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvqlhd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</LinearLayout>